--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -5,12 +5,16 @@
       <a href="/" class="title">
         Alberto F. Martín
       </a>
+      <div class="author__avatar">
+        <a href="/"><img src="/assets/avatar.jpg" alt="Alberto F. Martin" itemprop="image"></a>
+      </div>
     </div>
     <label for="show-menu" class="show-menu">MENU</label>
     <input type="checkbox" id="show-menu" role="button">
     <div class="menu" id="side-menu">
       <ul class="menu-list">
         <li class="menu-list-item {{ispage index}}active{{end}}"><a href="/" class="menu-list-link {{ispage index}}active{{end}}">Home</a>
+        <li class="menu-list-item {{ispage contact}}active{{end}}"><a href="/contact/" class="menu-list-link {{ispage index}}active{{end}}">Contact</a>
         <!--
         <li class="menu-list-item {{ispage menu1/*}}active{{end}}"><a href="/menu1/" class="menu-list-link {{ispage menu1}}active{{end}}">Curriculum Vitae</a>
         <li class="menu-list-item {{ispage menu2/*}}active{{end}}"><a href="/menu2/" class="menu-list-link {{ispage menu2}}active{{end}}">Research</a>
