More fixes to avatar

--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -6,7 +6,7 @@
         Alberto F. Martín
       </a>
       <div class="author__avatar">
-        <a href="/"><img src="/assets/avatar.jpg" alt="Alberto F. Martin" itemprop="image"></a>
+        <a href="/"><img src="/assets/avatar.png" alt="Alberto F. Martin" itemprop="image"></a>
       </div>
     </div>
     <label for="show-menu" class="show-menu">MENU</label>
