--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -36,10 +36,10 @@
     <div class="main-content">    <!-- closed in foot.html -->
       <div class="main-header">
         <a id="github" href="https://github.com/amartinhuertas">GitHub</a>
-        &nbsp &nbsp &nbsp &nbsp
+        <span style="width:30px; text-align: center;color:lightgray;">|</span>
         <a id="ResearchGate" href="https://www.researchgate.net/profile/Alberto-Martin-10">Research Gate</a>
-        &nbsp &nbsp &nbsp &nbsp
+        <span style="width:30px; text-align: center;color:lightgray;">|</span>
         <a id="GoogleScholar" href="https://scholar.google.es/citations?user=CumvSwwAAAAJ">Google Scholar</a>
-        &nbsp &nbsp &nbsp &nbsp
+        <span style="width:30px; text-align: center;color:lightgray;">|</span>
         <a id="MonashProfile" href="https://research.monash.edu/en/persons/alberto-f-martin">Monash Profile</a>
       </div>
