--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -13,8 +13,9 @@
     <input type="checkbox" id="show-menu" role="button">
     <div class="menu" id="side-menu">
       <ul class="menu-list">
-        <li class="menu-list-item {{ispage index}}active{{end}}"><a href="/" class="menu-list-link {{ispage index}}active{{end}}">Home</a>
-        <li class="menu-list-item {{ispage contact}}active{{end}}"><a href="/contact/" class="menu-list-link {{ispage index}}active{{end}}">Contact</a>
+        <li class="menu-list-item {{ispage index/*}}active{{end}}"><a href="/" 
+        class="menu-list-link {{ispage index}}active{{end}}">Home</a>
+        <li class="menu-list-item {{ispage contact/*}}active{{end}}"><a href="/contact/" class="menu-list-link {{ispage contact}}active{{end}}">Contact</a>
         <li class="menu-list-item {{ispage menu1/*}}active{{end}}"><a href="/menu1/" class="menu-list-link {{ispage menu1}}active{{end}}">Curriculum Vitae</a>
         <!--  
         <li class="menu-list-item {{ispage menu2/*}}active{{end}}"><a href="/menu2/" class="menu-list-link {{ispage menu2}}active{{end}}">Research</a>
