--- a/_css/jtd.css
+++ b/_css/jtd.css
@@ -513,7 +513,7 @@ td.fndef-backref {
   text-align: center;
   margin-bottom: 1em;
 }
-
+/*
 .franklin-content tr,
 th,
 td {
@@ -524,7 +524,7 @@ td {
 
 .franklin-content table tbody tr td {
   border: 0px solid black;
-}
+}*/
 
 .franklin-content blockquote {
   background: lemonchiffon;
@@ -644,7 +644,10 @@ body { counter-reset: eqnum; }
 
 .hljs-metap { color: rgb(51, 131, 231); }
 
-
+franklin-toc {
+  /* Avoid clickable elements being too close together. */
+  margin: 0.6rem 0;
+}
 
 .author__avatar {
   display: table-cell;
@@ -666,6 +669,11 @@ body { counter-reset: eqnum; }
     width: 36px;
     height: 36px;
   }
+}
+
+franklin-toc {
+  /* Avoid clickable elements being too close together. */
+  margin: 0.6rem 0;
 }
 
 .author__avatar img {
