--- a/_layout/style.html
+++ b/_layout/style.html
@@ -1,2 +1,3 @@
+  <link rel="stylesheet" href="/css/franklin.css">
   <link rel="stylesheet" href="/css/jtd.css">
   <link rel="icon" href="/assets/favicon.png">
