--- a/_css/jtd.css
+++ b/_css/jtd.css
@@ -471,7 +471,7 @@ Franklin SPECIFICS
 .franklin-content a {
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
+  /*white-space: nowrap;*/
 }
 
 .franklin-content ul,
