--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -44,4 +44,7 @@
         <a id="GoogleScholar" href="https://scholar.google.es/citations?user=CumvSwwAAAAJ">Google Scholar</a>
         <span style="width:30px; text-align: center;color:lightgray;">|</span>
         <a id="MonashProfile" href="https://research.monash.edu/en/persons/alberto-f-martin">Monash Profile</a>
+        <span style="width:30px; text-align: center;color:lightgray;">|</span>
+        <a id="LinkedIn" href="https://www.linkedin.com/in/alberto-f-martin-phd-a3647292/">LinkedIn</a>
+        <span style="width:30px; text-align: center;color:lightgray;">|</span>
       </div>
