--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -19,6 +19,7 @@
         <li class="menu-list-item {{ispage menu4/*}}active{{end}}"><a href="/menu4/" class="menu-list-link {{ispage menu4}}active{{end}}">Publications</a>     
         <li class="menu-list-item {{ispage menu3/*}}active{{end}}"><a href="/menu3/" class="menu-list-link {{ispage menu3}}active{{end}}">Software</a>
         <li class="menu-list-item {{ispage menu1/*}}active{{end}}"><a href="/menu1/" class="menu-list-link {{ispage menu1}}active{{end}}">Curriculum Vitae</a>
+        <li class="menu-list-item {{ispage menu5/*}}active{{end}}"><a href="/menu5/" class="menu-list-link {{ispage menu1}}active{{end}}">Research Students</a>  
         <li class="menu-list-item {{ispage contact/*}}active{{end}}"><a href="/contact/" class="menu-list-link {{ispage contact}}active{{end}}">Contact</a>
 
          <!--  
